Scala lang + 'now' object + code quality